Update: global fixes
